--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,7 @@
 <header>
     <div class="mx-auto text-center py-24">
         <h1 class="text-base-800 font-medium md:text-4xl text-3xl">
-            Bild(er) auswählen, Formular ausfüllen - fertig!
+            Bild auswählen, Formular ausfüllen - fertig!
         </h1>
     </div>
 </header>
