--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="de">
@@ -8,5 +9,6 @@ import BaseHead from "../components/BaseHead.astro";
 </head>
 <body class="bg-white max-w-6xl mx-auto px-8 lg:px-12 flex flex-col">
 <main class="grow"><slot /></main>
+<Footer />
 </body>
 </html>
